--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social-network-links:
   github: tanveermittal
 #  twitter: daattali
 #  reddit: yourname
-  linkedin: tanveer-amittal
+  linkedin: tanveermittal
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
