--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: Blog
 
 # List of links in the navigation bar
 navbar-links:
+  Workshops: "workshops"
   Projects: "projects"
   About Me: "aboutme"
 #  Resources:
@@ -39,13 +40,13 @@ avatar: "/img/pfp.JPG"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "#99DDFF"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-children-col: "#99DDFF"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#99DDFF"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
